--- a/modules/server/src/main/resources/vm/node/list.vm
+++ b/modules/server/src/main/resources/vm/node/list.vm
@@ -11,9 +11,11 @@
     </style>
 </head>
 <body>
-<div class="layui-row">
-    <button onclick="editProject('');" class="layui-btn layui-btn-sm">创建节点</button>
-</div>
+    #if($user.isSystemUser())
+    <div class="layui-row">
+        <button onclick="editProject('');" class="layui-btn layui-btn-sm">创建节点</button>
+    </div>
+    #end
     #if($array && $array.size()>0)
     <div class="layui-collapse" style="margin: 10px;">
         #foreach($item in $array)
@@ -24,15 +26,21 @@
                     </div>
                     <div class="layui-layout-right" style="padding-right: 10%;">
                         <button op="goIn" url="$!jpomProxyPath/node/index.html?nodeId=$item.id"
-                                class="layui-btn layui-btn-sm layui-btn-primary ">
+                                class="layui-btn layui-btn-sm layui-btn-normal ">
+                            <i class="layui-icon   layui-icon-release"></i>
                             进入
                         </button>
-                        <button op="edit" id="$item.id" class="layui-btn layui-btn-sm layui-btn-primary ">
-                            <i class="layui-icon">&#xe642;</i>
-                        </button>
+                        #if($user.isSystemUser())
+                            <button op="edit" id="$item.id" class="layui-btn layui-btn-sm ">
+                                <i class="layui-icon">&#xe642;</i>
+                                编辑
+                            </button>
+                        #end
                     </div>
                 </div>
-                <div class="layui-colla-content layui-show">内容区域</div>
+                <div class="layui-colla-content layui-show">
+                    <table id="table_$item.id" lay-filter="table_$item.id"></table>
+                </div>
             </div>
         #end
     </div>
@@ -43,7 +51,20 @@
 <script type="text/javascript">
     const apiWhere = {};
     var cachePortInfo;
-
+    var config = {
+        cols: [[
+            {field: 'count', title: '项目个数',},
+            {field: 'runCount', title: '运行中个数'},
+            {field: 'stopCount', title: '未运行个数'},
+        ]],
+        url: "./node_status",
+        loading: true,
+        response: {
+            statusCode: 200
+        },
+        done: function (data) {
+        }
+    };
 
     function loadSuccess() {
         // 点击事件
@@ -51,6 +72,11 @@
             layui.stope(e);
             var op = $(this).attr("op");
             if ("goIn" == op) {
+                top.layer.msg('加载节点中..', {
+                    icon: 16,
+                    shade: 0.2,
+                    time: 100000000
+                });
                 top.location.href = $(this).attr("url");
                 return;
             }
@@ -58,8 +84,17 @@
                 editProject($(this).attr("id"));
                 return;
             }
-            console.log();
-        })
+        });
+
+        #foreach($item in $array)
+            // var newConfig = config;
+            config.id = 'table_$item.id';
+            config.elem = '#table_$item.id';
+            config.where = {
+                nodeId: "$item.id"
+            }
+            tableRender(config);
+        #end
     }
 
     function editProject(id) {
