--- a/modules/server/src/main/resources/vm/node/list.vm
+++ b/modules/server/src/main/resources/vm/node/list.vm
@@ -25,11 +25,13 @@
                         $item.name
                     </div>
                     <div class="layui-layout-right" style="padding-right: 10%;">
-                        <button op="goIn" url="$!jpomProxyPath/node/index.html?nodeId=$item.id"
-                                class="layui-btn layui-btn-sm layui-btn-normal ">
-                            <i class="layui-icon   layui-icon-release"></i>
-                            进入
-                        </button>
+                        #if($item.openStatus)
+                            <button op="goIn" url="$!jpomProxyPath/node/index.html?nodeId=$item.id"
+                                    class="layui-btn layui-btn-sm layui-btn-normal ">
+                                <i class="layui-icon   layui-icon-release"></i>
+                                进入
+                            </button>
+                        #end
                         #if($user.isSystemUser())
                             <button op="edit" id="$item.id" class="layui-btn layui-btn-sm ">
                                 <i class="layui-icon">&#xe642;</i>
@@ -39,7 +41,12 @@
                     </div>
                 </div>
                 <div class="layui-colla-content layui-show">
-                    <table id="table_$item.id" lay-filter="table_$item.id"></table>
+                    #if($item.openStatus)
+                        <table id="table_$item.id" lay-filter="table_$item.id"></table>
+                    #else
+                        未启用节点
+                    #end
+
                 </div>
             </div>
         #end
@@ -87,13 +94,14 @@
         });
 
         #foreach($item in $array)
-            // var newConfig = config;
-            config.id = 'table_$item.id';
-            config.elem = '#table_$item.id';
-            config.where = {
-                nodeId: "$item.id"
-            }
-            tableRender(config);
+            #if($item.openStatus)
+                config.id = 'table_$item.id';
+                config.elem = '#table_$item.id';
+                config.where = {
+                    nodeId: "$item.id"
+                }
+                tableRender(config);
+            #end
         #end
     }
 
